# claude-session-manager

./: .gitignore  README.md  csm.config.example.toml  csm.service  package-lock.json  package.json  pyproject.toml  tsconfig.json
contrib/: claude-session-manager-user.service  claude-session-manager.service
src/: claude-cli.ts  cli.ts  config.ts  file-extract.ts  mcp-cli.ts  mcp.ts  prompts.ts  remote.ts  scheduler.ts  schedules.ts  server.ts
src/claude_session_manager/: __init__.py  api.py  claude_cli.py  cli.py
static/: app.jsx  data.js  drawer.jsx  icons.jsx  index.html  manifest.json  pieces.jsx  schedules.css  schedules.html  schedules.jsx  styles.css  sw.js
