[project]
name = "claude-session-manager"
version = "0.1.0"
description = "Web-based session manager for Claude Code background sessions and remote control"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "typer>=0.15",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
claude-session-manager = "claude_session_manager.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_session_manager"]

[tool.ruff]
target-version = "py311"
line-length = 120
